Adding label filter on job scheduler