@@ -9,6 +9,7 @@ import org.jobrunr.storage.PageRequest;
 
 import java.util.List;
 import java.util.concurrent.locks.ReentrantLock;
+import java.util.stream.Collectors;
 
 public class OnboardNewWorkTask extends ZooKeeperTask {
 
@@ -30,7 +31,7 @@ public class OnboardNewWorkTask extends ZooKeeperTask {
                 if (workPageRequest.getLimit() > 0) {
                     final List<Job> enqueuedJobs = storageProvider.getJobs(StateName.ENQUEUED, workPageRequest)
                             .stream().filter(j -> j.getLabels().contains(backgroundJobServer.getConfiguration().getName()))
-                            .toList();
+                            .collect(Collectors.toList());
                     LOGGER.debug("Found {} enqueued jobs to process.", enqueuedJobs.size());
                 }
             }
